# AI-Stock-Analysis-Assistant

./: README.md
backend/: .env  README.md  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
