[project]
name = "advanced-ai-stock-analysis-assistant-backend"
version = "0.1.0"
description = "FastAPI + LangChain stock analysis assistant backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116",
  "uvicorn>=0.23",
  "langchain>=0.1.0",
  "langgraph>=0.1.0",
  "langchain-openai>=0.1.0",
  "python-dotenv>=1.0",
  "pydantic>=1.10",
  "yfinance>=0.2",
  "anyio>=3.7"
]

[tool.uv.run]
python = "main.py"